# ORDA-Knowledge-Distillation-Kernel

./: .gitignore  README.md  README_VI.md  pyproject.toml
benchmark_results/csv/: bench_ce_kl.csv  bench_ce_only.csv  bench_end_to_end_compare.csv  bench_end_to_end_orda_large.csv  bench_kl_accuracy.csv  bench_kl_throughput.csv  bench_memory_bandwidth.csv
benchmark_results/json/: bench_ce_kl.json  bench_ce_only.json  bench_end_to_end_compare.json  bench_end_to_end_orda_large.json  bench_kl_accuracy.json  bench_kl_throughput.json  bench_memory_bandwidth.json
doc/: kernel_architecture_EN.md  kernel_architecture_VI.md
notebooks/: llama32_distillation_demo.ipynb  llama32_distillation_demo.txt
scripts/: check_ast_imports.py  run_all_test_colab.py
simulate/: Train_TiedTeacher.py  Train_TiedTeacher.txt  bench_vram_TiedTeacher.py  bench_vram_TiedTeacher.txt
simulate/src/: common.py  core.py
src/orda_ce_kernel/: __init__.py  _runtime.py  api.py
test/: conftest.py  logging_utils.py  run_tests.py
test/benchmark/: Train_PrecomputedTeacher.py  Train_SeparateTeacher_full.py  Train_SeparateTeacher_student.py  Train_TiedTeacher.py  bench_accuracy_ce.py  bench_accuracy_kl.py  bench_vram_PrecomputedTeacher.py  bench_vram_SeparateTeacher_full.py  bench_vram_SeparateTeacher_student.py  bench_vram_TiedTeacher.py
test/correctness/: test_public_api_cuda.py  test_torch_backend_cpu.py
test/unit/: test_autotune.py  test_dispatcher.py  test_env.py  test_no_config_dependency.py  (+2 more)
tests/: TESTING_EN.md  TESTING_VI.md  VALIDATION_EN.md  VALIDATION_VI.md  __init__.py  conftest.py
(+63 files in other folders)
