[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orda-ce-kernel"
version = "0.1.0"
description = "Per-mode Triton CE/KL distillation kernels for ORDA."
requires-python = ">=3.10"
dependencies = [
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src", "test"]
